Thu, 17 Apr 2008 17:42:31 +0200 <thp@perli.net>
Clean up preferences dialog + Move download settings to downloads tab

	* data/gpodder.glade: UI-related changes to the preferences dialog
	clean-up and the moving of the download settings to the downloads tab;
	thanks to Paul Rudking for the download settings to downloads tab
	patch
	* src/gpodder/download.py: Better rate limiting, implemented by Paul
	Rudkin
	* src/gpodder/gui.py: UI-related changes to the preferences dialog
	clean-up; the download settings changes are by Paul Rudkin
	* src/gpodder/services.py: Improve the waiting/locking for the maximum
	number of simultaneous downloads using a threading.Event
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=69)
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=83)

Tue, 15 Apr 2008 21:01:19 +0200 <thp@perli.net>
Updated French translation by Jérôme Chabod

	* data/po/fr.po: Updated French translation by Jérôme Chabod

Tue, 15 Apr 2008 20:57:51 +0200 <thp@perli.net>
Merge patch from Jérôme Chabod to really pimp the tray icon tooltip :)

	* src/gpodder/gui.py: Add some error reporting and change the code a
	bit to support the new tooltips; thanks to Jérôme Chabod
	* src/gpodder/trayicon.py: Add support for more elaborate tray icon
	tooltips; patch by Jérôme Chabod
	(Closes: http://bugs.gpodder.org/show_bug.cgi?id=97)

Mon, 14 Apr 2008 13:51:23 +0200 <thp@perli.net>
Add bug reporter to list of contributors

	* src/gpodder/gui.py: Bug #95 was reported by Tomas Matheson, so add
	him to the list of contributors

Mon, 14 Apr 2008 13:45:34 +0200 <thp@perli.net>
Set Close and cancel buttons to the default on most dialogs

	* data/gpodder.glade: Apply patch from Jerome Chabod that sets the
	close and cancel buttons on most dialogs of gPodder to the default and
	give them focus; this makes keyboard navigation possible and should
	make it easier for keyboard fans to use gPodder UI :) This partially
	fixes bug #95, but there are still some things to do for this bug.
